force-app/main/default/objects/Contact/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>MD</fullName><default>false</default><label>MD</label></value>
            <value><fullName>MBBS</fullName><default>false</default><label>MBBS</label></value>
            <value><fullName>DM (Oncology)</fullName><default>false</default><label>DM (Oncology)</label></value>
            <value><fullName>DM (Haematology)</fullName><default>false</default><label>DM (Haematology)</label></value>
            <value><fullName>MS (Surgery)</fullName><default>false</default><label>MS (Surgery)</label></value>
            <value><fullName>DNB</fullName><default>false</default><label>DNB</label></value>
            <value><fullName>PhD</fullName><default>false</default><label>PhD</label></value>
            <value><fullName>Consultant</fullName><default>false</default><label>Consultant</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>