force-app/main/default/objects/Contact/fields/Do_Not_Visit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent reps from scheduling visits with this physician (e.g. opted out, on leave, restricted).</description>
    <label>Do Not Visit</label>
    <type>Checkbox</type>
</CustomField>