force-app/main/default/objects/Contact/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Physician engagement score (0-100). Auto-calculated by Agentforce based on visit history, outcomes, and response to follow-ups.</description>
    <inlineHelpText>0 = Disengaged. 100 = Champion.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>