force-app/main/default/objects/Contact/fields/Influence_Level__c.field-meta.xml
<CustomField>
    <fullName>Influence_Level__c</fullName>
    <description>Influence level of this physician within their peer group and institution.</description>
    <label>Influence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Key Opinion Leader</fullName><default>false</default><label>Key Opinion Leader</label></value>
            <value><fullName>Influencer</fullName><default>false</default><label>Influencer</label></value>
            <value><fullName>Regular Prescriber</fullName><default>true</default><label>Regular Prescriber</label></value>
            <value><fullName>New Contact</fullName><default>false</default><label>New Contact</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>