force-app/main/default/objects/Contact/fields/Last_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date__c</fullName>
    <description>Date of the most recent visit with this physician. Auto-updated when a Visit Report is created.</description>
    <label>Last Visit Date</label>
    <type>Date</type>
</CustomField>