force-app/main/default/objects/Contact/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Medical council registration / license number of the physician.</description>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>