force-app/main/default/objects/Contact/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <description>National Provider Identifier for this physician.</description>
    <label>NPI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>