force-app/main/default/objects/Contact/fields/Prescribing_Potential__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Potential__c</fullName>
    <description>Estimated prescribing potential of this physician for Onco Global products.</description>
    <label>Prescribing Potential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Not Assessed</fullName><default>false</default><label>Not Assessed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>