force-app/main/default/objects/Contact/fields/Relationship_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Score__c</fullName>
    <description>Rolling average engagement score from last 10 visits to this prescriber (0-100). Updated automatically by VisitReportTriggerHandler.</description>
    <inlineHelpText>Relationship strength score 0-100. Higher = stronger relationship. Updated automatically after each visit.</inlineHelpText>
    <label>Relationship Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>