force-app/main/default/objects/Contact/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <description>Total expenses logged across all visit reports for this prescriber. Sum of Visit_Report__c.Total_Visit_Expense__c where Prescriber__c = this Contact. Updated by VisitReportTriggerHandler.</description>
    <inlineHelpText>Total Rs. spent on visits to this prescriber. Read-only — updated automatically.</inlineHelpText>
    <label>Total Expenses (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>