force-app/main/default/objects/Contact/fields/Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Visits__c</fullName>
    <description>Total number of visit reports logged for this prescriber. Updated automatically by VisitReportTriggerHandler on every insert/update/delete of Visit_Report__c.</description>
    <inlineHelpText>Total visits logged for this prescriber. Read-only — updated automatically.</inlineHelpText>
    <label>Total Visits</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>