force-app/main/default/objects/Contact/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <description>WhatsApp number for outbound messaging via Salesforce Digital Engagement (MVP 3).</description>
    <inlineHelpText>Include country code, e.g. +91 98765 43210</inlineHelpText>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>