force-app/main/default/objects/Contact/validationRules/VR_007_AccountRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_007_AccountRequired</fullName>
    <active>true</active>
    <description>VR-007: A Contact must be linked to an Account. Orphaned contacts cannot be targeted for visits or associated with Visit Reports.</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>A Contact must be linked to an Account. Please select the facility or physician account this contact belongs to.</errorMessage>
</ValidationRule>